Adding encryption on password
